--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -12,8 +12,6 @@
 
 <script type="text/javascript">
     $(function () {
-        CalcularValor();
-        CalcularPorcentaje();
         $("#IdBanco").change(function () {
             GetNumCheque();
             armar_diario();
@@ -27,14 +25,8 @@
             GetListBancoPorSucursal();
         });
         GetNumCheque();
-    });
-    function CalcularValor() {
-        var valor = Number($("#cb_valor").val());
-    }
+    });    
 
-    function CalcularPorcentaje() {
-
-    }
     function GetListBancoPorSucursal() {
         $("#IdBanco").empty();
         var datos = {
@@ -200,6 +192,7 @@
         });
         GridView_comprobante_detalle.PerformCallback();
         GridView_cheque_op.PerformCallback();
+        GridView_flujo_det.PerformCallback();
     }
 
     function GetNumCheque() {
@@ -224,7 +217,21 @@
         });
     }
 
-    
+    function CalcularPorcentaje() {
+        var valor = GridView_flujo_det.GetEditor('Valor').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var PorcentajeSet = (valor * 100) / ValorTotal
+
+        GridView_flujo_det.GetEditor('Porcentaje').SetValue(PorcentajeSet);
+    }
+
+    function CalcularValor() {
+        var porcentaje = GridView_flujo_det.GetEditor('Porcentaje').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var ValorSet = (ValorTotal * porcentaje) / 100
+
+        GridView_flujo_det.GetEditor('Valor').SetValue(ValorSet);
+    }
 </script>
 
 @using (Html.BeginForm("Nuevo", "ChequeBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
@@ -410,19 +417,8 @@
             </div>
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="cb_Observacion">*</label>
-                                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                        </div>
+                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
+            </div>
 
         </div>
     </div>
