--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Index.cshtml
@@ -8,6 +8,31 @@
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
+<script>
+
+    function enviar_fact_sri(IdEmpresa, IdSucursal, IdBodega, IdCbteVta)
+    {
+            var datos = {
+                 IdEmpresa,
+                 IdSucursal ,
+                 IdBodega,
+                IdCbteVta
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("enviar_fact_sri", "Factura",new { Area = "Facturacion"})',
+                async: false,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                },
+                error: function (error) {
+                }
+            });
+    }
+</script>
 @using (Html.BeginForm("Index", "Factura", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
@@ -96,7 +121,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_factura", new {  fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_factura", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
