--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbDivision_IngresoCompartido.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbDivision_IngresoCompartido.cshtml
@@ -2,11 +2,11 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdDivision";
+        settings.Name = "IDividion";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "CmbDivision", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "CmbDivision_IngresoCompartido", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Descripcion";
@@ -17,7 +17,7 @@
         settings.Properties.Columns.Add("Descripcion", "Descripción", 90);
         settings.Properties.FilterMinLength = 3;
     })
-     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_list_bajo_demanda_division, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_info_bajo_demanda_division)
-    .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_division_Info) ) ? "" : Model);
+     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_list_bajo_demanda_division_ingresocompartido, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_info_bajo_demanda_division_ingresocompartido)    
+    .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_x_division_x_area_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_empleado_x_division_x_area_Info>)) ? "" : Model);
     }
 @comboBox.GetHtml()
