--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -24,8 +24,14 @@
         $("#IdSucursal").change(function () {
             GetListBancoPorSucursal();
         });
+
+        $("#cb_Valor").change(function () {
+            actualizarGridDetFlujo();
+        });
+
         GetNumCheque();
-    });    
+        actualizarGridDetFlujo();
+    });
 
     function GetListBancoPorSucursal() {
         $("#IdBanco").empty();
@@ -45,7 +51,7 @@
             success: function (data) {
                 $.each(data, function (i, row) {
                     $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
-                });                
+                });
             },
             error: function (error) {
             }
@@ -82,11 +88,11 @@
                 if (data.GiradoA.length > 0) {
                     $("#cb_giradoA").val(data.GiradoA);
                     $("#cb_Observacion").val(data.Observacion);
-                }                
+                }
             },
             error: function (error) {
             }
-        });      
+        });
     }
 
     function MostrarModal() {
@@ -108,15 +114,15 @@
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
-            success: function (data) {                
+            success: function (data) {
                 GridView_cheque_op_x_cruzar.PerformCallback();
                 GridView_cheque_op_x_cruzar.UnselectRows();
                 $("#OpModal").modal("show");
-                              
+
             },
             error: function (error) {
             }
-        });        
+        });
     }
 
     function AddOP() {
@@ -217,6 +223,57 @@
         });
     }
 
+    function MostrarModalPlantilla() {
+        $("#PlantillaModal").modal("show");
+    }
+
+    function AgregarPlantilla(IdPlantilla) {
+        var datos = {
+            Valor: $("#cb_Valor").val(),
+            IdPlantillaTipoFlujo: IdPlantilla,
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_PlantillaTipoFlujo", "TipoFlujoPlantilla",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+
+        $("#PlantillaModal").modal("hide");
+
+    }
+
+    function actualizarGridDetFlujo() {
+        var datos = {
+            Valor: $("#cb_Valor").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizarGridDetFlujo", "TipoFlujoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
     function CalcularPorcentaje() {
         var valor = GridView_flujo_det.GetEditor('Valor').GetValue();
         var ValorTotal = $("#cb_Valor").val();
@@ -245,6 +302,25 @@
         </div>
 
     }
+
+    <div class="modal fade" id="PlantillaModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Plantilla tipo de flujo</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_TipoFlujoPlantilla_Asignar", new { Area = "Banco", Controller = "TipoFlujoPlantilla" })
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="modal fade" id="OpModal" role="dialog">
@@ -417,6 +493,14 @@
             </div>
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
+                            <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
+                        </button>
+                    </div>
+                </div>
+                <br />
                 @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
             </div>
 
