--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
@@ -16,8 +16,85 @@
         });
         $("#IdSucursal").change(function () {
             GetListBancoPorSucursal();
+            actualizarModal();
         });
+
+        actualizarModal();
+        actualizarGridDetFlujo();
     });
+
+    function actualizarModal() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Filtrar_GridViewPartial_DepositoBanco_x_cruzar", "DepositoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridView_DepositoBanco_x_cruzar.PerformCallback();
+                GridView_DepositoBanco_x_cruzar.UnselectRows();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function MostrarModalPlantilla() {
+        $("#PlantillaModal").modal("show");
+    }
+
+    function AgregarPlantilla(IdPlantilla) {
+        var datos = {
+            Valor: $("#cb_Valor").val(),
+            IdPlantillaTipoFlujo: IdPlantilla,
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_PlantillaTipoFlujo", "TipoFlujoPlantilla",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+
+        $("#PlantillaModal").modal("hide");
+
+    }
+
+    function actualizarGridDetFlujo() {
+        var datos = {
+            Valor: $("#cb_Valor").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizarGridDetFlujo", "TipoFlujoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
 
     function CalcularPorcentaje() {
         var valor = GridView_flujo_det.GetEditor('Valor').GetValue();
@@ -120,6 +197,7 @@ function GetListBancoPorSucursal() {
             success: function (data) {
                 GridView_comprobante_detalle.PerformCallback();
                 $("#cb_Valor").val(data);
+                actualizarGridDetFlujo();
             },
             error: function (error) {
             }
@@ -238,7 +316,7 @@ function GetListBancoPorSucursal() {
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="MotivoAnulacion">Motivo anulación</label>
+                    <label for="MotivoAnulacion">Motivo anulación*</label>
                     @Html.TextAreaFor(q => q.MotivoAnulacion, new { @id = "MotivoAnulacion", @class = "form-control", @rows = 2 })
                     @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
                 </div>
@@ -278,6 +356,14 @@ function GetListBancoPorSucursal() {
                 </div>
 
                 <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
+                                <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <br />
                     @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
                 </div>
 
